# activelearning

./: .dockerignore  .env.example  .gitignore  .vercelignore  .zenodo.json  CITATION.cff  CLAUDE.md  DEPLOY_AND_PUBLISH.md  LICENSE  README.md  REPRODUCIBILITY.md  mkdocs.yml  pyproject.toml  vercel.json
.github/workflows/: docs.yml  publish-pypi.yml
.specify/memory/: constitution.md  ubiquitous-language.md
api/: index.py
api/data/: kg.html  kg.json
apps/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/web/src/: App.tsx  api.ts  styles.css  vite-env.d.ts
data/: CORRECTIONS.md  README.md
data/data_old/: removed_inativo.csv
docs/: api.md  architecture.md  auditoria-experimentos-legado.md  avaliacao-e-graficos.md  bertimbau-local-passo-a-passo.md  biblioteca.md  conceitos.md  e2e3-docker.md  experimentos.md  flowbuilder.md  index.md  instalacao.md  paperswithcode.md  parada-e-drift.md  plano-mestre.md  quickstart.md  reproducibilidade.md
experiments/e0/: analyze_e0.py  analyze_noise_impact.py  config.json  config_calibration.json  config_full_lowcost.json  config_full_lowcost_reduced.json  config_full_nvidia.json  config_full_paid_maas.json  config_full_paid_openai.json  run_e0.py
experiments/e0/results/: ANALISE_ERROS.md  e0_mcnemar.json  e0_summary.json  e0_table.json  noise_impact.json
experiments/e0/results_pilot/: ANALISE.md  e0_mcnemar.json  e0_summary.json  e0_table.json
experiments/e0/results_pilot_strict/: e0_summary.json
experiments/e0p/: analyze_e0p.py  run_e0p.py
experiments/e0p/results/: analysis.json
experiments/e1e4/: analyze_e1e4.py  run_sweeps.py
experiments/e1e4/results/: analysis.json  baseline.json
experiments/e2e3/: Dockerfile  bertimbau_colab_tpu.ipynb  docker-compose.yml  e3prime_colab.ipynb  run_e3prime.py  run_smoke_cpu.py  train_full.py
experiments/e2e3/results/: e3prime_A_pred.json  e3prime_A_s42.json  e3prime_B_pred.json  e3prime_B_s42.json  e3prime_C_pred.json  e3prime_C_s42.json  e3prime_D.json  e3prime_D_pred.json  e3prime_E.json  e3prime_E20.json  e3prime_E20_pred.json  e3prime_E25_s42.json  e3prime_E25_s42_pred.json  e3prime_E30_s42.json  e3prime_E30_s42_pred.json  e3prime_E35_s42.json  e3prime_E35_s42_pred.json  e3prime_E_pred.json  smoke_cpu.json
experiments/e5cycle/: calibrate_batch.py  run_cycle.py
experiments/e5cycle/results/: calibration_b20_b50.json  cycle_pvbin.json  cycle_pvbin_b15k.json  cycle_sgd.json  cycle_sgd_b15k.json
experiments/e6population/: analyze_e6.py  run_population_curve.py
experiments/e6population/results/: analysis.json  analysis_multiseed.json  popcurve_pvbin_drisl-c.jsonl  popcurve_pvbin_drisl-c_state.json  popcurve_pvbin_drisl-c_summary.json  popcurve_pvbin_drisl-cs.jsonl  popcurve_pvbin_drisl-cs_state.json  popcurve_pvbin_drisl-cs_summary.json  popcurve_pvbin_drisl.jsonl  popcurve_pvbin_drisl_state.json  popcurve_pvbin_drisl_summary.json  popcurve_pvbin_entropy.jsonl  popcurve_pvbin_random.jsonl  (+107 more)
experiments/p1/: replay_ga.py  replay_l0_sensitivity.py
experiments/plots/: make_figures.py
scripts/: sync_public_kg.py
specs/001-oracle-evaluation/: spec.md
specs/002-flowbuilder/: spec.md
tests/unit/: test_api.py  test_domain.py  test_drisl.py  test_experiments_catalog.py  test_fichamento_draft.py  test_pvbin.py  test_run_active_learning.py  test_run_falco.py  test_sgd_text.py
(+101 files in other folders)
