[project]
name = "activelearning"
version = "0.1.0"
description = "Active Learning para classificação de texto com oráculos LLM — motor experimental da tese FALCO (DDD + Hexagonal)"
authors = [{ name = "Gilsiley Henrique Darú" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
oracles = [
    "openai>=1.40",
    "google-genai>=1.0",
    "ollama>=0.4",
]
classifiers = [
    "scikit-learn>=1.4",
    "torch>=2.2",
    "transformers>=4.40",
    "sentence-transformers>=3.0",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/activelearning"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
